--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/holidays
 spring.datasource.username=root
 spring.datasource.password=hemligt
 
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
