--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mariadb://container-2.int.henrikssons.org:3306/hol
 #spring.datasource.url=jdbc:mariadb://localhost:3306/holidays
 spring.datasource.username=root
-spring.datasource.password=hemligt
+spring.datasource.password=${password}
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
