--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mariadb://container-2.int.henrikssons.org:3306/hol
+spring.datasource.url=jdbc:mariadb://container-2.int.henrikssons.org:3306/holiday
 #spring.datasource.url=jdbc:mariadb://localhost:3306/holidays
 spring.datasource.username=root
 spring.datasource.password=${password}
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
