--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:mariadb://container-2.int.henrikssons.org:3306/holiday
-#spring.datasource.url=jdbc:mariadb://localhost:3306/holidays
+spring.datasource.url=jdbc:mariadb://172.17.0.2:3306/holiday
 spring.datasource.username=root
 spring.datasource.password=${password}
 
