--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mariadb://172.17.0.2:3306/holiday
+spring.datasource.url=jdbc:mariadb://localhost:3306/holiday
 spring.datasource.username=root
-spring.datasource.password=${password}
+spring.datasource.password=hemligt
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
+spring.jpa.open-in-view=false
